# pppd-sql

./: COPYING  FAQ  NEWS  README  README.encryption  README.scripts  TODO  configure.ac
doc/: Makefile.am  pppd-mysql.8  pppd-pgsql.8
scripts/: ppp-login-mysql.sql  ppp-login-postgresql.sql
src/: Makefile.am  auth-mysql.c  auth-mysql.h  auth-pgsql.c  auth-pgsql.h  chap-mysql.c  chap-mysql.h  chap-pgsql.c  chap-pgsql.h  chap.c  chap.h  pap.c  pap.h  plugin-mysql.c  plugin-mysql.h  plugin-pgsql.c  plugin-pgsql.h  plugin.c  plugin.h  str.c  str.h
